[package]
name = "acme_core"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
http = "0.2"
time = { version = "0.3", features = ["serde-well-known"] }
serde_json = "1"
base64 = "0.13"

[dev-dependencies]
serde_test = "1"
tokio = { version = "1", features = ["full"]}