[package]
name = "powerdns"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mysql = { path = "../mysql" }

serde = { version = "1", features = ["derive"] }
reqwest = "0.11"
testcontainers = "0.12"

[dev-dependencies]