[package]
name = "powerdns"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mysql = { path = "../mysql" }

serde = { version = "1", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
testcontainers = "0.14"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }